kubernetes/external-dns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      containers:
      - name: external-dns
        image: registry.k8s.io/external-dns/external-dns:v0.14.1
        args:
        # Add desired Gateway API Route sources.
        - --source=gateway-httproute
        - --domain-filter=bgalhardo.com
        - --provider=cloudflare
        - --cloudflare-proxied
      serviceAccountName: external-dns
