kubernetes/immich.yml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  selector:
    app: immich-server
  ports:
  - name: http
    port: 2283
---
apiVersion: v1
kind: Service
metadata:
  name: immich-ml
  namespace: immich
spec:
  selector:
    app: immich-ml
  ports:
  - name: http
    port: 3003
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-server
  namespace: immich
spec:
  hostnames:
  - immich.bgalhardo.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external
    sectionName: https
    namespace: system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: immich-server
      port: 2283
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  serviceName: immich-server
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
      - name: immich-server
        image: ghcr.io/immich-app/immich-server:v2.3.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/server/ping
            port: http
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /data
          name: data
          subPath: immich
        - mountPath: /data/thumbs
          name: immich-thumbs
        - mountPath: /data/encoded-video
          name: immich-encoded-video
        - mountPath: /external
          name: data
          subPath: archive_public
        - mountPath: /certs
          name: ca
        resources:
          requests:
            memory: "4Gi"
            cpu: "2"
          limits:
            memory: "8Gi"
            cpu: "4"
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: photos
      - name: ca
        secret:
          secretName: immich-ca
          items:
          - key: ca
            path: ca.crt
  volumeClaimTemplates:
  - metadata:
      name: immich-thumbs
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: longhorn
      resources:
        requests:
          storage: 5Gi
  - metadata:
      name: immich-encoded-video
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: longhorn
      resources:
        requests:
          storage: 50Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-ml
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-ml
  template:
    metadata:
      labels:
        app: immich-ml
    spec:
      containers:
      - name: immich-ml
        image: ghcr.io/immich-app/immich-machine-learning:v2.3.1
        imagePullPolicy: IfNotPresent
